syntax = "proto3";

package dfuse.eosio.abicodec.v1;

option go_package = "github.com/dfuse-io/dfuse-eosio/pb/dfuse/eosio/abicodec/v1;pbabicodec";

service Decoder {
  rpc DecodeTable(DecodeTableRequest) returns (Response);
  rpc DecodeAction(DecodeActionRequest) returns (Response);
  rpc GetAbi(GetAbiRequest) returns(Response);
}

message DecodeTableRequest {
  string account = 1;
  string table = 3;
  uint32 atBlockNum = 4;
  // Binary payload, decoded from hex_data here and there.
  bytes payload = 5;
}
message DecodeActionRequest {
  string account = 1;
  string action = 3;
  uint32 atBlockNum = 4;
  // Binary payload, decoded from hex_data here and there.
  bytes payload = 5;
}

message GetAbiRequest {
  string account = 1;
  uint32 atBlockNum = 4;
}

message Response {
  uint32 abiBlockNum = 1;
  string jsonPayload = 2;
}
